Fix an incorrect assertion in Vector::remove https://bugs.webkit.org/show_bug.cgi?id=87612

Reviewed by Dan Bernstein.

* wtf/Vector.h: There's no good reason to disallow calling remove
with a size of 0, even when the position is at the end of the vector,
so changed the two-argument Vector::remove assertion to assert that
the position is <= size rather than < size.


Canonical link: https://commits.webkit.org/105394@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@118649 268f45cc-cd09-0410-ab3c-d52691b4dbfc